--- a/theme/index.css
+++ b/theme/index.css
@@ -9414,7 +9414,7 @@
 .el-submenu__title {
   height: 56px;
   line-height: 56px;
-  font-size: 14px;
+  font-size: 18px;
   color: #303133;
   padding: 0 20px;
   list-style: none;
@@ -9459,7 +9459,7 @@
   height: 50px;
   line-height: 50px;
   padding: 0 45px;
-  min-width: 200px;
+  /* min-width: 200px; */
 }
 
 .el-submenu__icon-arrow {
@@ -9492,7 +9492,7 @@
 
 .el-submenu [class^="el-icon-"] {
   vertical-align: middle;
-  margin-right: 5px;
+  /* margin-right: 5px; */
   width: 24px;
   text-align: center;
   font-size: 18px;
@@ -19499,6 +19499,7 @@
 .el-table--enable-row-transition .el-table__body td {
   -webkit-transition: background-color .25s ease;
   transition: background-color .25s ease;
+  border-bottom: 1px solid #ebeef5;
 }
 
 .el-table--enable-row-hover .el-table__body tr:hover>td {
